--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "Mark Sarukhanov",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "fs": "^1.4.14",
+    "body-parser": "^1.4.28"
   }
 }
