--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "node server",
     "start": "node server.js"
   },
+  "engines": {
+    "node": "0.10.28"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/msarukhanov/mmalkav/tree/master/map"
@@ -18,7 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.3",
-    "fs": "^1.4.14",
+    // "fs": "^1.4.14",
     "body-parser": "^1.4.28"
   }
 }
